--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-rate-limiter": "^1.3.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.16",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "postmark": "^2.7.1"
   }
 }
